--- a/index.html
+++ b/index.html
@@ -392,11 +392,12 @@
     </table>
     </footer>
     <footer id="about">
-        &copy; 2025 Formula 1 Official. All rights reserved.
+        &copy; 2025 Formula 1 Official. Afif Arhab Ramadhan.
     </footer>
 
     <script src="UTS2.JS"></script>
 </body>
 </html>
 </body>
+
 </html>
