--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     </table>
     </footer>
     <footer id="about">
-        &copy; 2025 Formula 1 Official. Afif Arhab Ramadhan.
+        &copy; 2025 Formula 1 Official. By Afif.
     </footer>
 
     <script src="UTS2.JS"></script>
@@ -401,3 +401,4 @@
 </body>
 
 </html>
+
